--- a/public/global.css
+++ b/public/global.css
@@ -62,3 +62,13 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+h1, h2, h3,
+h4, h5 {
+	font-family: "Neuton", serif;
+	color: #005e82;
+}
+
+p{
+	font-size: 20px;
+}
